--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,6 +7,7 @@
   --destaque-inverso
   --fundo-card
 */
+
 *{
   margin: 0;
   padding: 0;
@@ -22,20 +23,33 @@
   --fundo-card: #ffffff;
 }
 
+body.escuro {
+  --fundo-principal: #222222;
+  --texto: #e0e0e0;
+  --texto-inverso: #333333;
+  --destaque: #ff5522;
+  --destaque-inverso: #a73917;
+  --fundo-card: #444444;
+}
+
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.5em;
   background-color: var(--fundo-principal);
   color: var(--texto);
+  transition: background-color 0.5s, color 0.5s;
 }
 
 header {
-  background-color: var(--destaque);
-  color: var(--texto);
-  padding: 10px;
   display: flex;
   justify-content: flex-end;
-  align-content: center;
+  align-content: center;  
+  background-color: var(--destaque);
+  color: var(--texto);
+  padding: 10px;  
+  position:sticky;
+  top:0;
+  z-index: 1;
 }
 
 nav#menu ul {
@@ -66,7 +80,7 @@ main {
 }
 
 section#ficha {
-  background-color: (var(--fundo-card));
+  background-color: var(--fundo-card);
   padding: 20px;
   border-radius: 8px;
   grid-column: 2;
@@ -111,6 +125,153 @@ div#social a:hover {
   color: var(--destaque-inverso);
 }
 
+section#detalhes {
+  grid-column: 2;
+}
+
+article {
+  background-color: var(--fundo-card);
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+
+article h2 {
+  color: var(--destaque);
+  margin-bottom: 20px;
+
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  margin: auto;
+  aspect-ratio: 16/9;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+}
+
+#skill-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 30px;
+}
+
+#skill-container .info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#skill-container .nome {
+  font-weight: bold;
+  color: var(--texto);
+}
+
+#skill-container .porcent {
+  font-weight: bold;
+  color: var(--destaque);
+}
+
+#skill-container .barra {
+  width: 100%;
+  height: 8PX;
+  background-color: var(--fundo-principal);
+  border-radius: 4px;
+}
+
+#skill-container .progresso {
+  height: 100%;
+  background-color: var(--destaque-inverso);
+  border-radius: 4px;
+}
+
+#formacao-container {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 20px;
+}
+
+#formacao-container .curso {
+  background-color: var(--fundo-principal);
+  border-radius: 8px;
+  border-left: 5px solid var(--destaque-inverso);
+  padding-left: 15px;
+  transition: border-width 0.5s, border-color 0.5s;
+}
+
+#formacao-container .curso:hover {
+  border-left-width: 15px;
+  border-color: var(--destaque);
+  cursor: pointer;
+}
+
+#formacao-container .periodo {
+  font-size: 0.8em;
+  font-weight: bold;
+  color: var(--texto);
+}
+
+#formacao-container .instituicao {
+  color: var(--destaque-inverso);
+  font-size: 1.1em;
+}
+
+#projeto-container {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 20px;
+
+}
+
+#projeto-container .projeto {
+  display: flex;
+  flex-direction: column;
+  gap:15px;
+  background-color: var(--fundo-principal);
+  padding: 10px;
+  border-radius: 8px;
+  border-left: 5px solid var(--destaque-inverso);
+  transition: border-color 0.5s, border-width 0.5s;
+}
+
+#projeto-container .projeto:hover {
+  border-color: var(-- --destaque);
+  border-left-width: 15px;
+  cursor: pointer;
+}
+
+#projeto-container .projeto a {
+    display: block; /* Faz o link ocupar o espaço da imagem */
+    width: 100%;    /* Ocupa a largura disponível no layout padrão */
+}
+
+#projeto-container .projeto a img.foto {
+    width: 100%;          /* Mantém 100% dentro do link */
+    aspect-ratio: 16/9;
+    object-fit: cover;
+    border-radius: 8px;
+    display: block;
+    
+}
+
+#projeto-container  .foto {
+  width: 100%;
+  aspect-ratio: 16/9;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+
+
 footer {
   background-color: var(--destaque);
   color: var(--texto-inverso);
@@ -130,14 +291,49 @@ footer a:hover {
 
 @media screen  and (min-width:768px) {
   main {
-    grid-template-columns: auto 30px 1fr auto;
+    grid-template-columns: auto 300px 1fr auto;
   }
 
   section#ficha {
-    grid-column: 2/3;
+    grid-column: 2 / 3;
     height: fit-content;
     position: sticky;
-    top:0cqb 65px;
+    top: 65px;
   }
+
+  section#detalhes {
+    grid-column: 3 / 4;
+  }
+
+  #skill-container {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  #projeto-container .projeto {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+
+  #projeto-container .projeto-info {
+    max-width: 80%;
+  }
+
+  #projeto-container .projeto a {
+    max-width: 20%;  /* Aplica a mesma limitação que antes */
+  }
+  
+  #projeto-container .projeto a img.foto {
+    aspect-ratio: 1 / 1;
+    max-width: 100%;  /* A imagem ocupa 100% do link */
+    max-height: 200px;
+  }
+
+  #projeto-container .foto {
+    aspect-ratio: 1 / 1;
+    max-width: 20%;
+    max-height: 200px;
+  }
+
+    
   
 }
